--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-spring": "^9.7.3",
+    "react-switch": "^7.0.0",
     "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
