--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "bootstrap-icons": "^1.10.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.15.0",
     "react-spring": "^9.7.3",
     "react-switch": "^7.0.0",
